# egui-selectable-table

./: Cargo.toml  README.md  demo-1f23a59d19fab9b0.js  demo-1f23a59d19fab9b0_bg.wasm  demo-2a8a7c81e2aab063.js  demo-2a8a7c81e2aab063_bg.wasm  demo-2dde734b34dbe05d.js  demo-2dde734b34dbe05d_bg.wasm  demo-649103f7b4360f73.js  demo-649103f7b4360f73_bg.wasm  demo-73da6f4ea71882b7.js  demo-73da6f4ea71882b7_bg.wasm  demo-9d0e6382a0bcb826.js  demo-9d0e6382a0bcb826_bg.wasm  demo-b918ae87cacfb977.js  demo-b918ae87cacfb977_bg.wasm  demo-dd8d9c963ca3c353.js  demo-dd8d9c963ca3c353_bg.wasm  index.html
demo/: Cargo.toml
demo/src/: app.rs  main.rs
src/: auto_reload.rs  auto_scroll.rs  fuzzy_matcher.rs  lib.rs  row_modification.rs  row_selection.rs
