[package]
name = "egui-selectable-table"
version = "0.4.1"
edition = "2024"
authors = ["TheRustyPickle <rusty.pickle94@gmail.com>"]
readme = "README.md"
description = """
A library for egui to create tables with draggable cell and row selection.
"""
keywords = ["egui", "table", "selectable-table", "drag", "row"]
categories = ["gui"]
homepage = "https://github.com/TheRustyPickle/egui-selectable-table"
repository = "https://github.com/TheRustyPickle/egui-selectable-table"
license = "MIT"
exclude = ["/demo", "/.github"]

[dependencies]
egui = { version = "0.32.0", default-features = false, features = ["rayon"] }
egui_extras = { version = "0.32.0", default-features = false }
nucleo-matcher = { version = "0.3.1", optional = true }
rayon = "1.10.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
perf = { level = "deny", priority = 3 }
style = { level = "deny", priority = 4 }
unwrap_used = { level = "deny", priority = 5 }

# might be useful to enable in the future
expect_used = { level = "allow", priority = 6 }
missing_panics_doc = { level = "allow", priority = 7 }
struct_excessive_bools = { level = "allow", priority = 8 }

[features]
default = []
fuzzy-matching = ["dep:nucleo-matcher"]

[package.metadata.docs.rs]
all-features = true
features = ["fuzzy-matching"]
rustdoc-args = ["--cfg", "docsrs"]
